--- a/client/src/containers/App.css
+++ b/client/src/containers/App.css
@@ -1,3 +1,32 @@
+.bodyWrapper {
+  margin-top: 100px;
+  border: 1px solid grey;
+  width: 65%;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.toolbar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.add-contact {
+  color: white;
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.1rem;
+  border: 0.5px solid white;
+  padding: 7px;
+  border-radius: 5px;
+}
+
+.add-contact:hover {
+  color: blue;
+  background-color: white;
+}
+
 /* .App {
   text-align: center;
 }
