Added confirmation for delete

--- a/client/src/components/styles/Contact.css
+++ b/client/src/components/styles/Contact.css
@@ -2,5 +2,5 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  /* border-bottom: 1px solid grey; */
+  border-bottom: 1px solid grey;
 }
