--- a/client/src/containers/App.css
+++ b/client/src/containers/App.css
@@ -1,6 +1,6 @@
 .bodyWrapper {
   margin-top: 100px;
-  border: 1px solid grey;
+  /* border: 1px solid grey; */
   width: 65%;
   text-align: center;
   margin-left: auto;
